# h745-start

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  Makefile.toml  README.md  core0.x  core1.x  memory.x  st_nucleo_h745zi.cfg
.cargo/: config
.devcontainer/: devcontainer.json
src/: hsem.rs  main.rs  utils.rs
